--- a/food_truck_locator/locatorApp/templates/locatorApp/index.html
+++ b/food_truck_locator/locatorApp/templates/locatorApp/index.html
@@ -73,6 +73,10 @@
                         <li>
                             {{ food_truck }}
                         </li>
+                    {% empty %}
+                        <li>
+                            No food trucks returned by query.
+                        </li>
                     {% endfor %}
                 </ul>
             </div>
