Updated static JS

--- a/food_truck_locator/locatorApp/templates/locatorApp/index.html
+++ b/food_truck_locator/locatorApp/templates/locatorApp/index.html
@@ -4,45 +4,9 @@
         <title>
             SF Food Truck Locator
         </title>
-        
+        {% load static %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script>
-            function validateForm() {
-                var latitude = document.forms["Coordinates"]["latitude"].value;
-                var longitude = document.forms["Coordinates"]["longitude"].value;
-
-                if (latitude == "") {
-                    alert("Latitude value is missing");
-                    return false;
-                }
-
-                if (!parseFloat(latitude)) {
-                    alert("Latitude value is not a number");
-                    return false;
-                }
-
-                if ((parseFloat(latitude) < 37.4) || (parseFloat(latitude) > 38.4)) {
-                    alert("Latitude value is out of range. Please enter a value between 37.4 and 38.4 for the San Francisco Area");
-                    return false;
-                }
-                
-                if (longitude == "") {
-                    alert("Longitude value is missing");
-                    return false;
-                }
-
-                if (!parseFloat(longitude)) {
-                    alert("Longitude value is not a number");
-                    return false;
-                }
-
-                if ((parseFloat(longitude) < -122.7) || (parseFloat(longitude) > -122.1)) {
-                    alert("Longitude value is out of range. Please enter a value between -122.7 and -122.1 for the San Francisco Area");
-                    return false;
-                }                       
-            }
-        </script>
-        
+        <script src="{% static 'locatorApp/index.js' %}"></script>
     </head>
     <body>
         <h1>
